# screeps-game-api

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appveyor.yml  bindgen-notes-temp.md  download-cargo-web.sh  run.bat  run.sh  rustfmt.toml  screeps-defaults.toml
.github/workflows/: build.yml  check.yml  lint.yml  style.yml  test.yml
cargo-screeps/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
cargo-screeps/docs/: initialization-header.md
cargo-screeps/resources/: default_initialization_header.js
cargo-screeps/src/: build.rs  config.rs  copy.rs  deploy.rs  main.rs  orientation.rs  run.rs  setup.rs  upload.rs
javascript/: console_error.js  utils.js
js/: main.js  object_id.js  part.js
screeps-game-api/: CHANGELOG.md  Cargo.toml  README.md  Web.toml  rustfmt.toml
screeps-game-api/javascript/: console_error.js  utils.js
screeps-game-api/src/: constants.rs  game.rs  inter_shard_memory.rs  js_collections.rs  lib.rs  macros.rs  memory.rs  pathfinder.rs  positions.rs  raw_memory.rs  traits.rs
screeps-game-api/src/game/: mod.rs
screeps-game-api/src/js_collections/: js_map.rs  js_vec.rs  mod.rs
screeps-game-api/src/memory/: mod.rs
screeps-game-api/src/objects/: macros.rs  mod.rs  structure.rs
screeps-game-api/src/objects/impls/: construction_site.rs  container.rs  creep.rs  flag.rs  mineral.rs  mod.rs  nuke.rs  resource.rs  room.rs  room_position.rs  room_terrain.rs  source.rs  structure_controller.rs  structure_keeper_lair.rs  structure_lab.rs  structure_link.rs  structure_nuker.rs  structure_observer.rs  structure_portal.rs  structure_power_bank.rs  structure_power_spawn.rs  structure_rampart.rs  structure_spawn.rs  structure_terminal.rs  structure_tower.rs  tombstone.rs  utils.rs
screeps-game-api/src/raw_memory/: mod.rs
source/: Cargo.toml
source/notes/: direct-register-code.md
source/src/: logging.rs  main.rs
source/src/api/: constants.rs  mod.rs  objects.rs  spawns.rs
source/src/api/game/: mod.rs
source/src/api/objects/: macros.rs  mod.rs
source/src/api/objects/impls/: creep.rs  room.rs  room_position.rs  structure_spawn.rs
source/src/memory/: cleanup.rs  mod.rs
src/: console.rs  constants.rs  containers.rs  enums.rs  game.rs  inter_shard_memory.rs  js_collections.rs  lib.rs  local.rs  macros.rs  memory.rs  objects.rs  pathfinder.rs  positions.rs  prototypes.rs  raw_memory.rs  traits.rs
src/constants/: extra.rs  find.rs  look.rs  math.rs  numbers.rs  part.rs  recipes.rs  seasonal.rs  small_enums.rs  types.rs
src/enums/action_error_codes/: constructionsite_error_codes.rs  creep_error_codes.rs  flag_error_codes.rs  game_cpu_error_codes.rs  game_map_error_codes.rs  game_market_error_codes.rs  game_shard_error_codes.rs  mod.rs  powercreep_error_codes.rs  room_error_codes.rs  roomposition_error_codes.rs  sharedcreep_error_codes.rs  spawning_error_codes.rs  structure_error_codes.rs  structurecontroller_error_codes.rs  structurefactory_error_codes.rs  structurelab_error_codes.rs  structurelink_error_codes.rs  structurenuker_error_codes.rs  structureobserver_error_codes.rs  structurepowerspawn_error_codes.rs  structurerampart_error_codes.rs  structurespawn_error_codes.rs  structureterminal_error_codes.rs  structuretower_error_codes.rs
src/game/: cpu.rs  gcl.rs  gpl.rs  map.rs  market.rs  rooms.rs  shard.rs  shards.rs
src/js_collections/: js_vec.rs  mod.rs
src/local/: cost_matrix.rs  js_object_id.rs  lodash_filter.rs  object_id.rs  position.rs  room_coordinate.rs  room_name.rs  room_position.rs  room_xy.rs  terrain.rs
src/local/object_id/: errors.rs  raw.rs
src/local/position/: approximate_offsets.rs  extra_math.rs  game_math.rs  game_methods.rs  pair_utils.rs  world_utils.rs
src/local/room_position/: approximate_offsets.rs  extra_math.rs  game_math.rs  game_methods.rs  pair_utils.rs  world_utils.rs
src/local/room_xy/: approximate_offsets.rs  extra_math.rs  game_math.rs
src/objects/: creep_shared.rs  impls.rs  mod.rs  structure.rs
src/objects/impls/: construction_site.rs  container.rs  cost_matrix.rs  creep.rs  creep_shared.rs  deposit.rs  flag.rs  map_visual.rs  mineral.rs  nuke.rs  owned_structure.rs  owner.rs  power_creep.rs  reactor.rs  resource.rs  room.rs  room_object.rs  room_position.rs  room_terrain.rs  room_visual.rs  ruin.rs  score_collector.rs  score_container.rs  source.rs  store.rs  structure.rs  structure_container.rs  structure_controller.rs  structure_extension.rs  structure_extractor.rs  structure_factory.rs  structure_invader_core.rs  structure_keeper_lair.rs  structure_lab.rs  structure_link.rs  structure_nuker.rs  structure_observer.rs  structure_portal.rs  structure_power_bank.rs  structure_power_spawn.rs  (+10 more)
