[package]
name = "screeps-game-api"
version = "0.9.0"
authors = ["David Ross <daboross@daboross.net>"]
documentation = "https://docs.rs/screeps-game-api/"
edition = "2018"
include = [
    "Cargo.toml",
    "Web.toml",
    "src/**/*",
    "javascript/**/*",
    "tests/**/*",
    "examples/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustyscreeps/screeps-game-api/"
description = "WASM bindings to the in-game Screeps API"

[lib]
name = "screeps"

[package.metadata.docs.rs]
all-features = true
# this workaround (and the cfg_attr wrapping around the doc(cfg()) calls) can go once the doc_cfg feature is stablized
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec = "0.5"
enum-iterator = "0.6"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
parse-display = { version = "0.4", default-features = false, features = [ 'std', 'once_cell' ] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_repr = "0.1"
stdweb = "0.4"
stdweb-derive = "0.5"

[features]
check-all-casts = []

# Enable the function call for pixel generation - only present on official MMO servers
generate-pixel = []

# Enable the interface for inter-shard memory - only present on official MMO servers
inter-shard-memory = []

# Enable score container, collector, and resource - used in season 1
score = []

# Enable symbol containers, decoders, and resources - used in season 2
symbols = []

## Sets of the above features for different server environments

# Official MMO server features, not present on other environments
mmo = ["generate-pixel", "inter-shard-memory"]

# Seasonal server, season 1
seasonal-season-1 = ["score"]

# Seasonal server, season 2
seasonal-season-2 = ["symbols"]
