[package]
name = "screeps-game-api"
version = "0.10.0"
authors = ["David Ross <daboross@daboross.net>"]
documentation = "https://docs.rs/screeps-game-api/"
edition = "2021"
include = [
    "Cargo.toml",
    "Web.toml",
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustyscreeps/screeps-game-api/"
description = "WASM bindings to the in-game Screeps API"

[lib]
name = "screeps"

[package.metadata.docs.rs]
all-features = true
# this workaround (and the cfg_attr wrapping around the feature(doc_auto_cfg) call)
# can go once the doc_auto_cfg feature is stablized
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec = "0.7"
enum_dispatch = "0.3"
enum-iterator = "1.4"
js-sys = "0.3"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
bincode = "1.3"

[features]
## Specific features to enable conditional API endpoints

# Enable the function call for pixel generation - only present on official MMO servers
generate-pixel = []

# Enable the interface for inter-shard memory - only present on official MMO servers
inter-shard-memory = []

# Enable score container, collector, and resource - used in season 1
score = []

# Enable symbol container, decoder, and resources - used in season 2
symbols = []

## Sets of the above features for different server environments

# Official MMO server features, not present on other environments
mmo = ["generate-pixel", "inter-shard-memory"]

# Seasonal server, season 1
seasonal-season-1 = ["score"]

# Seasonal server, season 2
seasonal-season-2 = ["symbols"]
