[package]
name = "screeps-game-api"
version = "0.21.2"
authors = ["David Ross <daboross@daboross.net>"]
documentation = "https://docs.rs/screeps-game-api/"
edition = "2021"
include = [
    "Cargo.toml",
    "Web.toml",
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustyscreeps/screeps-game-api/"
description = "WASM bindings to the in-game Screeps API"

[lib]
name = "screeps"

[package.metadata.docs.rs]
all-features = true
# this workaround (and the cfg_attr wrapping around the feature(doc_auto_cfg) call)
# can go once the doc_auto_cfg feature is stablized
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec = "0.7"
enum_dispatch = "0.3"
enum-iterator = "2.0"
js-sys = "0.3"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
bincode = "1.3"
wasm-bindgen-test = "0.3"

[features]
## Specific features to enable conditional API endpoints

# Official MMO server features, not present on other environments
mmo = []

# Seasonal server, season 1 - enable score container, collector, and resource
seasonal-season-1 = []

# Seasonal server, season 2 - enable symbol container, decoder, and resources
seasonal-season-2 = []

# Seasonal server, season 5 - enable thorium resource and reactor structure
seasonal-season-5 = []

# enable compatibility with the sim environment for positions
sim = []

# Enable unsafe conversions of return codes with undefined behavior when values
# aren't in the expected range
unsafe-return-conversion = []
