[package]
name = "cargo-screeps"
version = "0.1.6"
authors = ["David Ross <daboross@daboross.net>"]
description = "Build tool for deploying Rust WASM code to Screeps game servers"

documentation = "https://github.com/daboross/screeps-in-rust-via-wasm/cargo-screeps/"
repository = "https://github.com/daboross/screeps-in-rust-via-wasm/"
readme = "README.md"

license = "MIT"

include = ["Cargo.toml", "src/**/*", "tests/**/*", "examples/**/*", "LICENSE", "README.md"]

[dependencies]
base64 = "0.9"
clap = "2"
failure = "0.1"
fern = "0.5"
log = "0.4"
regex = "1"
reqwest = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
