[package]
name = "cargo-screeps"
version = "0.3.2"
edition = "2018"
authors = ["David Ross <daboross@daboross.net>"]
documentation = "https://github.com/daboross/screeps-in-rust-via-wasm/cargo-screeps/"
include = [
    "Cargo.toml",
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "resources/**/*",
    "LICENSE",
    "README.md",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/daboross/screeps-in-rust-via-wasm/"
description = "Build tool for deploying Rust WASM code to Screeps game servers"

[dependencies]
base64 = "0.10"
clap = "2"
# We rely on the output format of cargo-web, which is not a publicly guaranteed property.
cargo-web = "=0.6.26"
failure = "0.1"
fern = "0.5"
log = "0.4"
pathdiff = "0.1"
regex = "1"
reqwest = "0.9"
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.0.4"
serde_json = "1"
structopt = "0.2"
toml = "0.5"
