[package]
name = "screeps-game-api"
version = "0.0.8"
authors = ["David Ross <daboross@daboross.net>"]
description = "WASM bindings to the in-game Screeps API"

documentation = "https://docs.rs/screeps-game-api/"
repository = "https://github.com/daboross/screeps-in-rust-via-wasm/"
readme = "README.md"

license = "MIT"

include = ["Cargo.toml", "Web.toml", "src/**/*", "javascript/**/*", "tests/**/*", "examples/**/*", "LICENSE", "README.md"]

[lib]
name = "screeps"

[dependencies]
stdweb = "0.4"
log = "0.4"
enum_primitive = "0.1"
num-traits = "0.2"
serde = "1"
serde_derive = "1"
scoped-tls = "0.1"
