[package]
name = "screeps-game-api"
version = "0.3.0"
authors = ["David Ross <daboross@daboross.net>"]
documentation = "https://docs.rs/screeps-game-api/"
include = [
    "Cargo.toml",
    "Web.toml",
    "src/**/*",
    "javascript/**/*",
    "tests/**/*",
    "examples/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/daboross/screeps-in-rust-via-wasm/"
description = "WASM bindings to the in-game Screeps API"

[lib]
name = "screeps"

[dependencies]
log = "0.4"
num-derive = "0.2"
num-traits = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
scoped-tls = "0.1"
stdweb = "0.4"
stdweb-derive = "0.5"

[features]
check-all-casts = []
constants-serde = []
