[package]
name = "pound3pound"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.5"
screeps-game-api = { version = "0.0.1", path = "../screeps-game-api/" }
serde_derive = "1"
serde = "1"
bincode = "1"
base64 = "0.9"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
